[package]
name = "finance"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-postgres = "0.14.0"
futures = "0.3.31"
postgres-types = { version = "0.2.9", features = ["chrono-04", "with-chrono-0_4"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"
toml = "0.8.1"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }
utoipa = { version = "4.1.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["rocket"] }
